2009-12-18 Sancho lerena <slerena@gmail.com>

	* extras/aditional_rpmspec/xprobe2-0.3.spec: Updated to make it
	compatible with SUSE build service.

	* extras/aditional_rpmspec/wmic-4.0.0tp4-SVN-build-UNKNOWN.spec: Final
	changes (updated web, license and description).

2009-12-09  Sancho Lerena <slerena@gmail.com>

	* * aditional_rpmspec/xprobe2-0.3.spec: Fixed parameter to avoid FHS
	enforcing on SUSE Build Service.

2009-12-08   Sancho lerena <slerena@gmail.com>

	* aditional_sources: Added directory to put there sources of
	modified packages used in Pandora FMS.

	* aditional_sources/xprobe_0.3: Patched version to compile with gcc4.x
	and used to do SUSE RPM packages for 11.x

	* aditional_rpmspec/xprobe2-0.3.spec: Added spec for xprobe2 (SUSE and RH).

2009-11-11   Sancho Lerena <slerena@artica.es>

	* tentacle_proxy: Upgrade to support a previous check of connectiviy
	before trying to copy nothing to up server.

	* generic_daemon_launcher: A generic script used to launch other 
	apps/scripts as daemons. Could be used with tentacle_proxy, daemon_watchdog
	a secondary pandora_agent or pandora_server instance, for example.

	* daemon_watchdog: A script used to watchdog for another process, for
	example a pandora_server or a mysql. This also try to "restart" the process
	if it's down and has a custom execution field to notify directly admin
	when a daemon is not restarting and it's down.

	* build_rpm_packages.sh: Some fixes in RPM build script.

2009-09-08   Sancho Lerena <slerena@artica.es>

	* Initial load of extras subdir. Expect to have some dirty
	scripts and misc. stuff here. 

	* extras/tentacle_proxy: Tentacle proxy script to pass data/conf files from
	one tentacle server, used like a proxy to reach another server. 

	* extras/aditional_rpmspec: Additional RPM's to create RPM packages to
	satisfy Pandora FMS dependencies.

	* extras/build_rpm_packages.sh: Script to make all Pandora FMS RPM's.